修改资源清单配置

--- a/gitlab/03-secret.yaml
+++ b/gitlab/03-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: gitlab
-  namespace: gitlab
+  namespace: cicd
 data:
   db_pass: bWFnZWR1LmNvbQ==
   db_user: Z2l0bGFi
