--- a/jenkins/05-jenkins.yaml
+++ b/jenkins/05-jenkins.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins
-  namespace: jenkins 
+  namespace: cicd
 spec:
   replicas: 1
   selector:
