--- a/gitlab/02-redis.yaml
+++ b/gitlab/02-redis.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: cce-evs-redis
-  namespace: gitlab
+  namespace: cicd
   annotations:
     everest.io/disk-volume-type: SAS
   labels:
@@ -15,13 +15,13 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: csi-disk
+  storageClassName: nfs-storage
 ---
 kind: Service
 apiVersion: v1
 metadata:
   name: gitlab-redis
-  namespace: gitlab
+  namespace: cicd
   labels:
     app: gitlab-redis
 spec:
@@ -38,7 +38,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: gitlab-redis
-  namespace: gitlab
+  namespace: cicd
   labels:
     app: gitlab-redis
 spec:
