--- a/gitlab/05-gitlab.yaml
+++ b/gitlab/05-gitlab.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: cce-evs-gitlab
-  namespace: gitlab
+  namespace: cicd
   annotations:
     everest.io/disk-volume-type: SAS
   labels:
@@ -16,21 +16,21 @@ spec:
   resources:
     requests:
       storage: 20Gi
-  storageClassName: csi-disk
+  storageClassName: nfs-storage
 ---
 ## Service
 kind: Service
 apiVersion: v1
 metadata:
   name: gitlab
-  namespace: gitlab
+  namespace: cicd
   labels:
     app: gitlab
   annotations:
     # 提示：请根据实际可用的ELB信息修改如下三个注解信息的值；
-    kubernetes.io/elb.class: union
-    kubernetes.io/elb.id: a27c8dfa-a0b1-4f70-8453-6d997b2959ba
-    kubernetes.io/elb.mark: '0'
+    #kubernetes.io/elb.class: union
+    #kubernetes.io/elb.id: a27c8dfa-a0b1-4f70-8453-6d997b2959ba
+    #kubernetes.io/elb.mark: '0'
 spec:
   ports:
     - name: http
@@ -43,16 +43,16 @@ spec:
       targetPort: 22
   selector:
     app: gitlab
-  type: LoadBalancer
+  type: NodePort
   # 请根据ELB上绑定的实际可用EIP修改如下属性值；
-  loadBalancerIP: 122.9.71.123
-  externalTrafficPolicy: Cluster
+  #loadBalancerIP: 122.9.71.123
+  #externalTrafficPolicy: Cluster
 ---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: gitlab
-  namespace: gitlab
+  namespace: cicd
   labels:
     app: gitlab
 spec:
