--- a/jenkins/02-jenkins-rbac.yaml
+++ b/jenkins/02-jenkins-rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: jenkins-admin
-  namespace: jenkins
+  namespace: cicd
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -41,4 +41,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: jenkins-admin
-  namespace: jenkins
+  namespace: cicd
