--- a/jenkins/06-pvc-for-mavan-cache.yaml
+++ b/jenkins/06-pvc-for-mavan-cache.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name:  pvc-sfs-maven-cache
-  namespace: jenkins
+  namespace: cicd
 spec:
   accessModes:
   - ReadWriteMany
   resources:
     requests:
       storage: 20Gi
-  storageClassName: csi-nas
+  storageClassName: nfs-storage
